--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
       content="kalendar app"
     />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Kalendar</title>
+    <title>Covid19</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
   </head>
   <body >
